--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"bits-ui": "^0.18.3",
 		"clsx": "^2.1.0",
+		"embla-carousel-svelte": "^8.0.0",
 		"lucide-svelte": "^0.340.0",
 		"mode-watcher": "^0.2.1",
 		"tailwind-merge": "^2.2.1",
