finishing home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#530D51",
-        "titleBar.activeBackground": "#741271",
-        "titleBar.activeForeground": "#FEFBFE"
-    }
+	"workbench.colorCustomizations": {
+		"activityBar.background": "#530D51",
+		"titleBar.activeBackground": "#741271",
+		"titleBar.activeForeground": "#FEFBFE"
+	},
+	"css.customData": [".vscode/tailwind.json"]
 }
