--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,10 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
+	"bracketSameLine": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": [
-		"prettier-plugin-svelte",
-		"prettier-plugin-tailwindcss"
-	],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
 		{
 			"files": "*.svelte",
