--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@fontsource-variable/inter": "^5.0.16",
 		"@iconify-json/ph": "^1.1.11",
 		"@playwright/test": "^1.41.2",
+		"@svelte-put/preprocess-inline-svg": "^2.1.3",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/adapter-vercel": "^5.1.0",
 		"@sveltejs/kit": "^2.5.2",
@@ -46,6 +47,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/speed-insights": "^1.0.10",
 		"bits-ui": "^0.18.3",
 		"clsx": "^2.1.0",
 		"embla-carousel-svelte": "^8.0.0",
