--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@svelte-put/preprocess-inline-svg": "^2.1.3",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/adapter-vercel": "^5.1.0",
+		"@sveltejs/enhanced-img": "^0.1.8",
 		"@sveltejs/kit": "^2.5.2",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "^8.56.3",
@@ -47,6 +48,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sentry/sveltekit": "^7.104.0",
 		"@vercel/speed-insights": "^1.0.10",
 		"bits-ui": "^0.18.3",
 		"clsx": "^2.1.0",
