--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"lucide-svelte": "^0.340.0",
 		"mode-watcher": "^0.2.1",
 		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0"
+		"tailwind-variants": "^0.2.0",
+		"vaul-svelte": "^0.2.4"
 	}
 }
