--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@typescript-eslint/parser": "^7.1.0",
 		"autoprefixer": "^10.4.17",
 		"embla-carousel-autoplay": "^8.0.0",
+		"embla-carousel-wheel-gestures": "^8.0.0-rc05",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -50,7 +51,7 @@
 	"dependencies": {
 		"@sentry/sveltekit": "^7.104.0",
 		"@vercel/speed-insights": "^1.0.10",
-		"bits-ui": "^0.18.3",
+		"bits-ui": "^0.18.6",
 		"clsx": "^2.1.0",
 		"embla-carousel-svelte": "^8.0.0",
 		"lucide-svelte": "^0.340.0",
