--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@playwright/test": "^1.42.1",
 		"@svelte-put/preprocess-inline-svg": "^2.1.3",
 		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/adapter-vercel": "^5.1.0",
+		"@sveltejs/adapter-cloudflare": "^4.1.0",
 		"@sveltejs/enhanced-img": "^0.1.8",
 		"@sveltejs/kit": "^2.5.2",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
