fix navbar being wacky

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.background": "#530D51",
-		"titleBar.activeBackground": "#741271",
+		"activityBar.background": "#000000",
+		"titleBar.activeBackground": "#000000",
 		"titleBar.activeForeground": "#FEFBFE"
 	},
 	"css.customData": [".vscode/tailwind.json"]
