--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
 		"bits-ui": "^0.18.6",
 		"clsx": "^2.1.0",
 		"embla-carousel-svelte": "^8.0.0",
+		"formsnap": "^0.5.1",
 		"lucide-svelte": "^0.340.0",
 		"mode-watcher": "^0.2.2",
+		"sveltekit-superforms": "^2.11.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
-		"vaul-svelte": "^0.2.4"
+		"vaul-svelte": "^0.2.4",
+		"zod": "^3.22.4"
 	}
 }
