--- a/package.json
+++ b/package.json
@@ -15,50 +15,51 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@fontsource-variable/inter": "^5.0.17",
-		"@iconify-json/ph": "^1.1.11",
-		"@playwright/test": "^1.42.1",
-		"@svelte-put/preprocess-inline-svg": "^2.1.3",
-		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/adapter-cloudflare": "^4.2.0",
+		"@fontsource-variable/inter": "^5.1.0",
+		"@iconify-json/ph": "^1.2.1",
+		"@playwright/test": "^1.48.2",
+		"@svelte-put/preprocess-inline-svg": "^2.1.4",
+		"@sveltejs/adapter-cloudflare": "^4.7.4",
 		"@sveltejs/enhanced-img": "^0.1.9",
-		"@sveltejs/kit": "^2.5.4",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@types/eslint": "^8.56.5",
-		"@typescript-eslint/eslint-plugin": "^7.1.1",
-		"@typescript-eslint/parser": "^7.1.1",
-		"autoprefixer": "^10.4.18",
-		"embla-carousel-autoplay": "^8.0.0",
-		"embla-carousel-wheel-gestures": "^8.0.0-rc05",
-		"eslint": "^8.57.0",
+		"@sveltejs/kit": "^2.8.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/eslint": "^8.56.12",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"autoprefixer": "^10.4.20",
+		"embla-carousel-autoplay": "^8.3.1",
+		"embla-carousel-wheel-gestures": "^8.0.1",
+		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"postcss": "^8.4.35",
-		"postcss-load-config": "^5.0.3",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
-		"prettier-plugin-tailwindcss": "^0.5.12",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.8",
-		"tailwindcss": "^3.4.1",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.2",
+		"eslint-plugin-svelte": "^2.46.0",
+		"postcss": "^8.4.49",
+		"postcss-load-config": "^5.1.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.8",
+		"prettier-plugin-tailwindcss": "^0.5.14",
+		"svelte": "^4.2.19",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.15",
+		"tslib": "^2.8.1",
+		"typescript": "^5.6.3",
 		"unplugin-icons": "^0.18.5",
-		"vite": "^5.1.5",
-		"vitest": "^1.3.1"
+		"vite": "^5.4.11",
+		"vitest": "^1.6.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"bits-ui": "^0.18.6",
-		"clsx": "^2.1.0",
-		"embla-carousel-svelte": "^8.0.0",
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.3.1",
 		"formsnap": "^0.5.1",
 		"lucide-svelte": "^0.340.0",
 		"mode-watcher": "^0.2.2",
-		"sveltekit-superforms": "^2.11.0",
-		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0",
+		"sveltekit-superforms": "^2.20.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.2.4",
-		"zod": "^3.22.4"
-	}
+		"zod": "^3.23.8"
+	},
+	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
